<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_add_note">Добавить</string>
    <string name="start_label">Где будем хранить заметки?</string>
    <string name="start_btn_room">На телефоне</string>
    <string name="title">Заметки</string>
    <string name="toast_enter_name">Имя не может быть пустым</string>
    <string name="btn_start_firebase">firebase</string>
    <string name="email_hint">Введите EMAIL</string>
    <string name="enter_password_hint">Введите пароль</string>
    <string name="btn_login_start">Логин</string>
    <string name="toast_wrong_enter">Введите email и пароль</string>
</resources>