<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.start.StartFragment">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/app_large_text"
        android:layout_margin="@dimen/app_margin"
        />
    
    <Button
        android:id="@+id/btn_room"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:text="@string/start_btn_room"
        app:layout_constraintTop_toBottomOf="@id/text_view"
        android:layout_margin="@dimen/app_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btn_firebase"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_firebase"
        app:layout_constraintTop_toBottomOf="@id/btn_room"
        android:layout_margin="@dimen/app_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_firebase"
        android:layout_margin="@dimen/app_margin"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:visibility="gone"
        />
    <EditText
        android:id="@+id/input_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_email"
        android:layout_margin="@dimen/app_margin"
        android:hint="@string/enter_password_hint"
        android:inputType="textPassword"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_start"
        app:layout_constraintTop_toBottomOf="@id/input_password"
        android:layout_margin="@dimen/app_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        />





</androidx.constraintlayout.widget.ConstraintLayout>